feat:  modify request, response of authentication service and user service
