# gen/openapiv2/api/authentication/authentication.swagger.json
@@ -159,6 +159,12 @@
         },
         "username": {
           "type": "string"
+        },
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
         }
       }
     },
